[package]
name = "tower-sessions-seaorm-store"
description = "SeaORM session store for `tower-sessions`."
version = "0.1.0"
edition = "2021"
authors = ["Sholom Ber L <sholom@sholomber.com>"]
license = "MIT"
homepage = "https://github.com/Himmelschmidt/tower-sessions-seaorm-store"
keywords = ["axum", "sessions", "cookie", "tower", "sea-orm", "postgres"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/Himmelschmidt/tower-sessions-seaorm-store"
documentation = "https://docs.rs/tower-sessions-seaorm-store"
readme = "README.md"

[features]
default = ["postgres"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]
# mysql = ["sea-orm/sqlx-mysql"]

[dependencies]
tower-sessions = "0.14.0"
sea-orm = { version = "1.1.11", features = [
    "runtime-tokio-rustls",
    "macros",
    "time",
    "with-time",
] }
async-trait = "0.1.88"
thiserror = "2.0.12"
rmp-serde = "1.3.0"
time = { version = "0.3.41", features = ["serde"] }
chrono = "0.4.41"

[dev-dependencies]
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio"] }
sea-orm-migration = { version = "1.1.11", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
] }
axum = "0.8.4"
tokio = { version = "1.45.0", features = ["full"] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[example]]
name = "axum_example"
path = "examples/axum_example.rs"
